docs: clean up README