@@ -2,22 +2,25 @@
 
 Dense and sparse linear algebra for Kotlin Multiplatform.
 
-Kotlin has no standard multiplatform linear-algebra library. koblas is a small, focused one: read-only
-matrix/vector containers with sealed dense/sparse backings, free-function arithmetic over them, and a
-per-platform primitive backend (SIMD on the JVM today; a tuned BLAS/LAPACK — and later GPU — backend can
-slot in behind the same seam).
+Kotlin has no standard multiplatform BLAS/linear-algebra library. koblas is a small, focused one:
+serializable matrix and vector containers, free-function arithmetic over them, and a per-platform
+compute backend that a tuned BLAS/LAPACK (and, later, GPU) implementation can replace without touching
+callers.
 
 ## What it provides
 
-- `MatrixView` / `DenseMatrix` — read-only matrix with a flat, row-major `DoubleArray` backing.
-- `VectorView` / `DenseVector` / `SparseVector` — read-only vector, dense or compressed-sparse.
-- Free-function arithmetic over the views:
-  - BLAS-1/2: `dot`, `axpy`, `scale`, `addOuter` (rank-1 update), `matVec`, `forEachStored`.
-  - SPD suite: `cholesky`, `choleskyDowndateInPlace`, `solveSpd`, `invertSpd`.
-- `mathBackend` — the resolved primitive backend id (`"simd(N lanes)"` on the JVM when the incubator
-  Vector API is available, else `"scalar"`).
+Containers — a read-only `View` contract, concrete backings that also expose their storage for in-place
+work:
 
-All container types are `@Serializable` (kotlinx.serialization); the dense matrix serialises to a 2D
+- `MatrixView` / `DenseMatrix` — flat, row-major `DoubleArray` backing.
+- `VectorView` / `DenseVector` / `SparseVector` — dense or compressed-sparse.
+
+Arithmetic — free functions over the views:
+
+- BLAS-1/2: `dot`, `axpy`, `scale`, `addOuter` (rank-1 update), `matVec`, `forEachStored`.
+- Symmetric positive-definite: `cholesky`, `choleskyDowndateInPlace`, `solveSpd`, `invertSpd`.
+
+All containers are `@Serializable` (kotlinx.serialization); `DenseMatrix` serialises to a 2D
 `Array<DoubleArray>` wire form independent of its flat backing.
 
 ## Usage
@@ -25,21 +28,27 @@ All container types are `@Serializable` (kotlinx.serialization); the dense matri
 ```kotlin
 import com.eignex.koblas.*
 
-val a = DenseMatrix.of(arrayOf(
-    doubleArrayOf(2.0, 1.0),
-    doubleArrayOf(1.0, 3.0),
-))
+val a = DenseMatrix.of(
+    arrayOf(
+        doubleArrayOf(2.0, 1.0),
+        doubleArrayOf(1.0, 3.0),
+    ),
+)
 val b = doubleArrayOf(3.0, 5.0)
 
-val l = a.cholesky()        // A = L Lᵀ
-val x = solveSpd(l, b)      // solves A x = b
+val l = a.cholesky()   // A = L·Lᵀ
+val x = solveSpd(l, b) // solves A·x = b
 ```
 
-## Status
+## Backends
 
-Early. The op set is intentionally minimal — the pieces its consumers need — and grows on demand.
-Dense hot paths use SIMD on the JVM (`jdk.incubator.vector`) with a scalar fallback everywhere; native
-BLAS/LAPACK and GPU backends are planned behind the same primitive seam.
+Dense hot paths route through an `expect`/`actual` primitive seam. The JVM backend uses the incubator
+Vector API (`jdk.incubator.vector`) when present and falls back to scalar loops; every other target is
+scalar. `mathBackend` reports the resolved backend (e.g. `"simd(8 lanes)"` or `"scalar"`). Native
+BLAS/LAPACK and GPU backends are planned behind the same seam.
+
+JVM consumers that want the SIMD path pass `--add-modules=jdk.incubator.vector` at runtime; correctness
+does not depend on it.
 
 ## Coordinates
 
@@ -52,6 +61,10 @@ implementation("com.eignex:koblas:<version>")
 ```
 ./gradlew check lintDocs
 ```
+
+## Status
+
+Early. The operation set is intentionally minimal — the pieces its consumers need — and grows on demand.
 
 ## License
 
